	* Add support for sending a User-Agent header

2008-05-16 Thomas Perl <thpinfo.com>
	* Release version 1.3

2008-11-14 Thomas Perl <thpinfo.com>
	+ Add example for using HTML Tidy (needs python-utidylib)
	+ Add example for using the ical2txt module (needs python-vobject)
	+ Add ical2txt.py module for converting ics to plaintext
	* More comments in hooks.py for better user documentation
	* Release version 1.4

2008-11-18 Thomas Perl <thp@thpinfo.com>
	* Support for installing into the system
	* Use ~/.urlwatch/ for config, cache and hooks
	* Apply BSD license
	* Add setup.py (and remove makefile)
	* Command-line options
	* Verbose logging mode
	* Example urls.txt and hooks.py
	* Update README
	* Add manpage (urlwatch.1)
	* Release version 1.5

2008-12-23 Thomas Perl <thp@thpinfo.com>
	* Use hashlib in Python 2.5 and above for SHA-1 generation
	* Release version 1.6

2009-01-03 Thomas Perl <thp@thpinfo.com>
	* Add urlwatch.html2txt module to convert/format HTML to plaintext
	* Add example of using html2txt in the example hooks file
	* The html-to-plaintext feature has been suggested by Evert Meulie
	* Release version 1.7

2009-01-05 Thomas Perl <thp@thpinfo.com>
	* Fix a problem with relative links in Lynx' "-dump" mode

2009-01-07 Thomas Perl <thp@thpinfo.com>
	* Fix another problem with file-relative links in html2text w/ Lynx

2009-01-12 Thomas Perl <thp@thpinfo.com>
	* Describe ical2txt and html2txt with examples in manpage

2009-01-15 Thomas Perl <thp@thpinfo.com>
	* Add TODO list

2009-01-20 Thomas Perl <thp@thpinfo.com>
	* Set the socket timeout to one minute to avoid hangs

2009-07-27 Thomas Perl <thp@thpinfo.com>
	* Catch and handle IOErrors from FTP timeouts

2009-08-01 Thomas Perl <thp@thpinfo.com>
	* Add error handling for socket timeouts (HTTP mode)

2009-08-10 Thomas Perl <thp@thpinfo.com>
	* Handle httplib errors (Debian bug 529740)
	  (Thanks to Bastian Kleineidam and Franck Joncourt)
	* urlwatch 1.8 released
